--- a/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
+++ b/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
@@ -1,36 +1,68 @@
 .button {
+	min-width: 130px;
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
+	padding: 7px 24px;
+	border-radius: 5px;
+	font-size: 14px;
+	font-weight: 600;
+	color: #fff;
+	background-color: #06c;
+	border: none;
+	cursor: pointer;
+}
+.button:hover {
+	background-color: #0080ff;
+}
+.button:active {
+	background-color: #0059b2;
 }
 
 .disabled {
+	background-color: #004d99;
+	opacity: 0.5;
+	color: #002e5c;
+	cursor: no-drop;
 }
 
 .secondary {
+	background-color: transparent;
+	border: 1px solid #06c;
+	color: #06c;
 }
 
 .default {
 }
 
 .red {
+	background-color: #cc1439;
 }
 
 .default:hover {
 }
 
 .red:hover {
+	background-color: #ff1a47;
 }
 
 .secondary:hover {
+	background-color: #e5f0fa;
 }
-
 
 .default:active {
 }
 
 .secondary:active {
+	background-color: #c9e5ff;
 }
 
 .red:active {
+	background-color: #b21232;
 }
 
 .button:disabled {
+	background-color: #004d99;
+	opacity: 0.5;
+	color: #002e5c;
 }
