--- a/src/s2-homeworks/hw05/header/Header.module.css
+++ b/src/s2-homeworks/hw05/header/Header.module.css
@@ -1,8 +1,18 @@
 .burgerMenuIcon {
+	user-select: none;
 }
 
 .header {
+	min-height: 60px;
+	box-shadow: 0px 0px 2px 0px rgba(29, 33, 38, 0.1),
+		0px 0px 40px 0px rgba(29, 33, 38, 0.13);
+	display: flex;
+	justify-content: space-between;
+	padding: 0 280px;
+	align-items: center;
 }
 
 .header h1 {
+	font-size: 24px;
+	font-weight: 600;
 }
