--- a/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
+++ b/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
@@ -1,24 +1,62 @@
 .sidebar {
+	position: fixed;
+	z-index: 10;
+	background-color: #fff;
+	left: -100%;
+	transition: left 0.3s ease 0s;
+	height: 100%;
+	max-width: 320px;
+	width: 100%;
+	padding-left: 70px;
+	padding-top: 65px;
+	box-shadow: 0px 1px 2px 0px rgba(29, 33, 38, 0.1),
+		0px 10px 40px 0px rgba(29, 33, 38, 0.13);
 }
 
 .sidebar.open {
+	left: 0;
 }
 
 .background {
+	opacity: 0.3;
+	background: #000;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 5;
 }
 
 .nav {
+	display: inline-flex;
+	flex-direction: column;
+	gap: 40px;
 }
 
 .nav a {
+	text-decoration: none;
+	font-weight: 600;
+	font-size: 22px;
+	color: #000;
 }
 
 .nav a:hover {
+	color: #58acff;
 }
 
 .nav a.active {
+	color: #0059b2;
+	text-decoration: underline solid;
 }
 .close {
+	cursor: pointer;
+	position: absolute;
+	top: 15px;
+	right: 25px;
+	background-color: #fff;
+	border: none;
+	padding: 5px;
 }
 
 .close img {
