--- a/src/s2-homeworks/hw06/common/c4-SuperEditableSpan/SuperEditableSpan.module.css
+++ b/src/s2-homeworks/hw06/common/c4-SuperEditableSpan/SuperEditableSpan.module.css
@@ -1,7 +1,13 @@
 .spanBlock {
+	display: flex;
+	align-items: center;
+	gap: 10px;
 }
 
 .span {
+	color: #0080ff;
+	font-size: 16px;
+	font-weight: 500;
 }
 
 .input {
