--- a/src/s2-homeworks/hw07/common/c5-SuperSelect/SuperSelect.module.css
+++ b/src/s2-homeworks/hw07/common/c5-SuperSelect/SuperSelect.module.css
@@ -1,9 +1,14 @@
 .select {
+	padding: 5px 10px;
+	min-width: 165px;
+	border-radius: 2px;
+	border: 1px solid #c2c2c2;
 }
 
 .select:focus {
+	background-color: #fff;
+	box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.15);
 }
-
 
 .option:hover {
 }
