--- a/src/s2-homeworks/hw07/common/c6-SuperRadio/SuperRadio.module.css
+++ b/src/s2-homeworks/hw07/common/c6-SuperRadio/SuperRadio.module.css
@@ -1,15 +1,52 @@
 .radio {
+	width: 0;
+	height: 0;
+	opacity: 0;
+	position: absolute;
 }
 
 .radio::before {
 }
-
-
-.radio:checked::before {
+.radio:checked + .span:after {
+	transform: scale(1);
 }
 
 .label {
+	display: inline-flex;
+	align-items: center;
+	gap: 10px;
+	padding-left: 25px;
+	position: relative;
+}
+.span {
+	font-size: 16px;
+}
+.span:before {
+	content: '';
+	align-self: flex-start;
+	width: 16px;
+	height: 16px;
+	border-radius: 50%;
+	border: 2px solid #000;
+	position: absolute;
+	left: 0;
+	top: 0;
+}
+.span:after {
+	content: '';
+	transition: all 0.3s ease 0s;
+	transform: scale(0);
+	width: 10px;
+	height: 10px;
+	border-radius: 50%;
+	background-color: #000;
+	position: absolute;
+	left: 5px;
+	top: 5px;
 }
 
 .options {
+	display: inline-flex;
+	flex-direction: column;
+	gap: 20px;
 }
