--- a/src/s2-homeworks/hw09/Clock.module.css
+++ b/src/s2-homeworks/hw09/Clock.module.css
@@ -1,14 +1,22 @@
 .buttonsContainer {
+	display: flex;
+	gap: 20px;
 }
 
 .clock {
+	position: relative;
 }
 
 .watch {
+	margin-bottom: 55px;
 }
 
 .watch strong {
 }
 
 .more {
+	position: absolute;
+	top: 25px;
+	color: rgba(0, 0, 0, 0.5);
+	font-size: 14px;
 }
