--- a/src/s2-homeworks/hw10/Loader.module.css
+++ b/src/s2-homeworks/hw10/Loader.module.css
@@ -1,3 +1,13 @@
-.loader {
-    /*свг и/или анимация*/
+.loader img {
+	/*свг и/или анимация*/
+	animation: rotate 1.5s linear infinite;
+}
+
+@keyframes rotate {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
 }
