--- a/src/s2-homeworks/hw12/HW12.module.css
+++ b/src/s2-homeworks/hw12/HW12.module.css
@@ -1,23 +1,24 @@
 [data-theme='1'] {
-    --color: #000000;
-    --background: #FFFFFF;
+	--color: #000000;
+	--background: #ffffff;
 }
 
 [data-theme='2'] {
-    --color: #000000;
-    --background: #DDEEFF;
+	--color: #000000;
+	--background: #ddeeff;
 }
 
 [data-theme='3'] {
-    --color: #FFFFFF;
-    --background: #212A34;
+	--color: #ffffff;
+	--background: #212a34;
 }
 
 html {
-    background-color: var(--background);
-    color: var(--color);
+	background-color: var(--background);
+	color: var(--color);
 }
 
-.select {
-
+[data-theme='3'] .select {
+	color: var(--color);
+	background-color: var(--background);
 }
