--- a/src/s2-homeworks/hw13/HW13.module.css
+++ b/src/s2-homeworks/hw13/HW13.module.css
@@ -1,7 +1,15 @@
 .buttonsContainer {
+	display: inline-flex;
+	gap: 24px;
+	margin-bottom: 60px;
 }
 
 .responseContainer {
+	display: flex;
+	max-width: 1400px;
+	margin: 0 auto;
+	align-items: center;
+	gap: 100px;
 }
 
 .imageContainer {
@@ -10,10 +18,16 @@
 .image {
 }
 
-.textContainer{
+.textContainer {
+	font-size: 16px;
+	font-weight: 500;
+	line-height: 20px;
 }
 
 .code {
+	font-weight: 500;
+	font-size: 30px;
+	margin-bottom: 15px;
 }
 
 .text {
