--- a/src/s2-homeworks/hw14/HW14.module.css
+++ b/src/s2-homeworks/hw14/HW14.module.css
@@ -1,7 +1,14 @@
+.wrapper {
+	max-width: 468px;
+}
 .tech {
-
+	line-height: 24px;
 }
 
 .loading {
-
+	text-align: right;
+	color: #4d4d4d;
+	font-weight: 300;
+	font-size: 14px;
+	margin-top: 10px;
 }
