--- a/src/s2-homeworks/hw15/common/c9-SuperPagination/SuperPagination.module.css
+++ b/src/s2-homeworks/hw15/common/c9-SuperPagination/SuperPagination.module.css
@@ -1,11 +1,15 @@
 .pagination {
-    display: flex;
+	display: flex;
+	align-items: center;
+	gap: 10px;
+	margin-bottom: 35px;
+}
+.select {
+	min-width: auto;
 }
 
 .text1 {
-
 }
 
 .text2 {
-
 }
