--- a/src/s2-homeworks/hw15/HW15.module.css
+++ b/src/s2-homeworks/hw15/HW15.module.css
@@ -23,6 +23,7 @@
 }
 .rowWrapper {
 	max-width: 600px;
+	position: relative;
 }
 .row {
 	display: flex;
@@ -46,4 +47,11 @@
 
 .loading {
 	position: absolute;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: rgba(255, 255, 255, 0.8);
+	z-index: 1;
 }
